fix line wrapping of span code text

--- a/_sass/minima/_syntax-highlighting.scss
+++ b/_sass/minima/_syntax-highlighting.scss
@@ -1,6 +1,10 @@
 /**
  * Syntax highlighting styles
  */
+ .highlighter-rouge {
+   overflow-wrap: break-word;
+ }
+
 .highlight {
   background: #fff;
   @extend %vertical-rhythm;
